crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__table_with_composite_fk_snapshot@table_with_composite_fk_Gorm.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
package models

type LineItems struct {
    ID int32 `gorm:"column:id;primaryKey" json:"id"`
    OrderID int32 `gorm:"column:order_id;not null" json:"order_id"`
    OrderVersion int32 `gorm:"column:order_version;not null" json:"order_version"`
    Sku string `gorm:"column:sku;not null;type:text" json:"sku"`
    Orders Orders `gorm:"foreignKey:OrderID,OrderVersion;references:ID,Version" json:"-"`
}

func (LineItems) TableName() string { return "line_items" }
