crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__table_with_composite_fk_snapshot@table_with_composite_fk_Prisma.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
assertion_line: 81
expression: rendered
---
model LineItems {
  id Int @id
  order_id Int
  order_version Int
  sku String

  @@map("line_items")
}
