crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__table_with_enum_snapshot@table_with_enum_Django.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
from __future__ import annotations

from django.db import models


class OrderStatus(models.TextChoices):
    PENDING = "pending"
    SHIPPED = "shipped"
    DELIVERED = "delivered"

class Orders(models.Model):
    id = models.IntegerField()
    status = models.CharField(max_length=9, choices=OrderStatus.choices)

    class Meta:
        db_table = "orders"
