crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__table_with_enum_snapshot@table_with_enum_Gorm.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
package models

type OrderStatus string

const (
    OrderStatusPending OrderStatus = "pending"
    OrderStatusShipped OrderStatus = "shipped"
    OrderStatusDelivered OrderStatus = "delivered"
)

type Orders struct {
    ID int32 `gorm:"column:id;not null" json:"id"`
    Status OrderStatus `gorm:"column:status;not null" json:"status"`
}

func (Orders) TableName() string { return "orders" }
