crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__table_with_fk_snapshot@table_with_fk_Django.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
from __future__ import annotations

from django.db import models


class Posts(models.Model):
    id = models.IntegerField(primary_key=True)
    user = models.ForeignKey("Users", on_delete=models.RESTRICT, related_name="+")
    title = models.TextField()

    class Meta:
        db_table = "posts"
