crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__table_with_fk_snapshot@table_with_fk_Gorm.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
package models

type Posts struct {
	ID     int32  `gorm:"column:id;primaryKey" json:"id"`
	UserID int32  `gorm:"column:user_id;not null" json:"user_id"`
	User   Users  `gorm:"foreignKey:UserID" json:"-"`
	Title  string `gorm:"column:title;not null;type:text" json:"title"`
}

func (Posts) TableName() string { return "posts" }
