crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__table_with_indexes_snapshot@table_with_indexes_Prisma.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
model Articles {
  id Int @id
  title String @db.Text
  created_at DateTime @db.Timestamptz

  @@index([created_at], name: "idx_articles_created_at")
  @@index([title])
  @@map("articles")
}
