crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__table_with_integer_enum_snapshot@table_with_integer_enum_Django.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
from __future__ import annotations

from django.db import models


class PriorityLevel(models.IntegerChoices):
    LOW = 0, "low"
    MEDIUM = 10, "medium"
    HIGH = 20, "high"

class Tasks(models.Model):
    id = models.IntegerField(primary_key=True)
    priority = models.IntegerField(choices=PriorityLevel.choices)

    class Meta:
        db_table = "tasks"
