crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__table_with_integer_enum_snapshot@table_with_integer_enum_Gorm.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
package models

type PriorityLevel int

const (
    PriorityLevelLow PriorityLevel = 0
    PriorityLevelMedium PriorityLevel = 10
    PriorityLevelHigh PriorityLevel = 20
)

type Tasks struct {
    ID int32 `gorm:"column:id;primaryKey" json:"id"`
    Priority PriorityLevel `gorm:"column:priority;not null" json:"priority"`
}

func (Tasks) TableName() string { return "tasks" }
